[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu/title_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/Title.png" type="Texture" id=2]
[ext_resource path="res://Menu/buttons/MenuButtons/PlayButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/buttons/MenuButtons/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/buttons/MenuButtons/OptionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/logo_250.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/berlinsansfb_36.tres" type="DynamicFont" id=7]
[ext_resource path="res://Menu/fade/Fade.tscn" type="PackedScene" id=8]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.203922, 0.286275, 0.368627, 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0

[node name="Title" type="TextureRect" parent="Menu"]
margin_right = 1296.0
margin_bottom = 177.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 181.0
margin_right = 1296.0
margin_bottom = 613.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 646.0
margin_bottom = 432.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="PlayButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 51.0
margin_right = 646.0
margin_bottom = 151.0

[node name="QuitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 166.0
margin_right = 646.0
margin_bottom = 266.0
scene_to_load = "res://Menu/SubMenus/QuitMenu.tscn"

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 281.0
margin_right = 646.0
margin_bottom = 381.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 650.0
margin_right = 1296.0
margin_bottom = 432.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Logo" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 198.0
margin_top = 91.0
margin_right = 448.0
margin_bottom = 341.0
texture = ExtResource( 6 )

[node name="FooterRow" type="HBoxContainer" parent="Menu"]
margin_top = 617.0
margin_right = 495.0
margin_bottom = 704.0
size_flags_horizontal = 2
size_flags_vertical = 0
alignment = 1

[node name="VersionLabel" type="Label" parent="Menu/FooterRow"]
margin_right = 495.0
margin_bottom = 87.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "Circlehead Version 1.0
Contributers: Dominik, Gabriel"

[node name="Fade" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="fade_finished" from="Fade" to="." method="_on_Fade_fade_finished"]
